Add in section about the potential.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.43 2009/09/21 14:45:45 ith Exp $
+% $Id: dbi-intro.tex,v 1.44 2009/09/24 15:16:51 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.43 2009/09/21 14:45:45 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.44 2009/09/24 15:16:51 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -559,6 +559,17 @@ $X \equiv - \frac{1}{2} g^{\mu\nu} \nabla_{\mu} \varphi \nabla_{\nu} \varphi$
 is the kinetic energy of the inflaton and $V(\varphi )$ denotes 
 the field's interaction 
 potential. 
+Typically in warped compactifications of 
+IIB supergravity, this potential is determined by the 
+relevant fluxes and brane interaction terms. 
+We will ignore the precise origin
+and form of this potential, but simply
+note that it is highly sensitive to the string theoretic construction. For the
+purpose of this note we will simply treat it 
+as an arbitrary function of the inflaton field.
+(See, for example, Ref. \cite{brane5} for a discussion 
+on the precise form that the inflaton potential may take.)
+
 
 We consider a spatially flat and isotropic cosmology 
 sourced by a homogeneous scalar field. 
