--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.33 2009/09/24 15:16:29 ith Exp $
+% $Id: multibrane.tex,v 1.34 2009/09/24 16:04:53 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.33 2009/09/24 15:16:29 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.34 2009/09/24 16:04:53 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -204,23 +204,20 @@ field and
 l \equiv \frac{2(\alpha -3 )}{\alpha -6} \, . 
 \end{equation}
 % 
-\addtodo{ Show working}
 It can be verified that the inequalities (\ref{eq:Plimits}) 
 are satisfied in the `relativistic' limit, where $X \simeq 1/f_2$.
-We consider the inflationary dynamics in this limit in what follows. 
-For completeness, we note that \eq{eq:defalpha} can be solved 
-analytically in 
-full generality and the solution is presented in the Appendix. 
+We consider the inflationary dynamics in this limit in what follows but for
+completeness we show in the next section that \eq{eq:defalpha} can be solved
+analytically without this approximation. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{Exact Solution}
+\subsection{Analytic General Solution}
 \label{sec:apx-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-
 \eq{eq:defalpha} can be analytically solved in full 
 generality without imposing the limits (\ref{eq:Plimits}) on the 
 derivatives of the kinetic function. This allows us to determine the 
@@ -287,18 +284,18 @@ different classes of solution, arising as limits
 of the expansion of the hypergeometric function.
 
 
-The special case of $\alpha =2$ $(s=-1)$ implies (after a 
-further redefinition of the functions $f_i (\varphi ))$ that 
-% 
-\begin{equation}
-\label{eq:DBIsoln-multi}
-P = -f_1 \sqrt{1-f_2 X} -f_3
-\end{equation}
-% 
-and this corresponds to the standard DBI action (\ref{eq:DBIkinetic}) 
-\cite{chenetal,lidser2}.          
+% The special case of $\alpha =2$ $(s=-1)$ implies (after a 
+% further redefinition of the functions $f_i (\varphi ))$ that 
+% % 
+% \begin{equation}
+% \label{eq:DBIsoln-multi}
+% P = -f_1 \sqrt{1-f_2 X} -f_3
+% \end{equation}
+% % 
+% and this corresponds to the standard DBI action (\ref{eq:DBIkinetic}) 
+% \cite{chenetal,lidser2}.          
 
-
+\addtodo{Put later on where it will fit.}
 The case $\alpha =18/5$ $(s=-1/3)$ can also be expressed in terms 
 of elementary functions, again after redefinition of the $f_i (\varphi)$: 
 % 
@@ -325,13 +322,15 @@ easily transform the above expression into the required form.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-The standard DBI scenario is recovered for $l=1/2$. 
+The standard DBI scenario is recovered from \eq{eq:gensoln-multi} for
+$l=1/2, \alpha = 2$ (or $s=-1$ in the exact case following a redefinition of
+$f_i$). 
 More generally however, \eq{eq:gensoln-multi} implies that  
 % 
 \begin{eqnarray}
 \label{eq:consequence-multi}
 c_sP_{,X} \simeq \frac{l f_1 f_2}{\sqrt{2(1-l)}} \left( 
-1- f_2X \right)^{(2m-1)/2} \,,
+1- f_2X \right)^{(2l-1)/2} \,,
 \\
 c_s^2 \simeq \frac{1-f_2X}{2(1-l)} \,,
 \end{eqnarray}
@@ -357,7 +356,7 @@ implies that
 \begin{equation}
 \label{eq:weakBM-multi}
 r_*< \frac{32}{N \Neff^2} \frac{l f_1 f_2}{\sqrt{2(1-l)}}
-\left( -\frac{\fnleq}{\beta} \right)^{(1-2m)/2}
+\left( -\frac{\fnleq}{\beta} \right)^{(1-2l)/2}
 \end{equation}
 % 
 and
@@ -367,7 +366,7 @@ and
 r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
 \left( \frac{h_*}{\Mpl} \right)^{4/3}
 \frac{l f_1 f_2}{\sqrt{2(1-l)}}
-\left( -\frac{\fnleq}{\beta} \right)^{(1-2m)/2}
+\left( -\frac{\fnleq}{\beta} \right)^{(1-2l)/2}
 \end{equation}
 % 
 respectively. 
