--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.34 2009/09/24 16:04:53 ith Exp $
+% $Id: multibrane.tex,v 1.35 2009/09/25 10:32:42 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.34 2009/09/24 16:04:53 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.35 2009/09/25 10:32:42 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -295,22 +295,7 @@ of the expansion of the hypergeometric function.
 % and this corresponds to the standard DBI action (\ref{eq:DBIkinetic}) 
 % \cite{chenetal,lidser2}.          
 
-\addtodo{Put later on where it will fit.}
-The case $\alpha =18/5$ $(s=-1/3)$ can also be expressed in terms 
-of elementary functions, again after redefinition of the $f_i (\varphi)$: 
-% 
-\begin{equation}
-P = \frac{-f_1\left[8 - 4f_2X^{1/3}
--\left(f_2X^{1/3}\right)^2\right]}{\sqrt{1-f_2X^{1/3}}} -f_3 \, .
-\end{equation}
-% 
-Note that this expression appears in a slightly different 
-form to that in (\ref{eq:unifiedgenP-multi}). 
-However in deriving (\ref{eq:unifiedgenP-multi}) we assumed the
-relativistic limit, which in turn imposes a non-trivial 
-relation between $X$ and $\varphi$. Using this, and with a 
-suitable redefinition of the functions, we can
-easily transform the above expression into the required form.
+
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -968,7 +953,23 @@ is still of the required form.
 
 
 \eq{eq:unifiedP-multi} is precisely of the form given by the 
-general solution (\ref{eq:gensoln-multi}), where $l=-1/2$ and 
+general solution (\ref{eq:gensoln-multi}), where $l=-1/2$ and
+\footnote{This is the case $\alpha =18/5$ or $s=-1/3$ in the analytic solution
+\eqref{eq:thirdint-multi} which after redefinition of the $f_i (\varphi)$
+becomes:
+% 
+\begin{equation}
+P = \frac{-f_1\left[8 - 4f_2X^{1/3}
+-\left(f_2X^{1/3}\right)^2\right]}{\sqrt{1-f_2X^{1/3}}} -f_3 \, .
+\end{equation}
+% 
+This expression appears in a slightly different 
+form to that in (\ref{eq:unifiedgenP-multi}). 
+However in deriving (\ref{eq:unifiedgenP-multi}) we assumed the
+relativistic limit, which in turn imposes a non-trivial 
+relation between $X$ and $\varphi$. Using this, and with a 
+suitable redefinition of the functions, we can
+transform the above expression into the required form.} 
 % 
 \begin{equation}
 \label{eq:fdefns-multi}
